Fix porting issues
Took 31 seconds